# awsipranges

./: .dockerignore  .flake8  .gitignore  404.html  Dockerfile  Makefile  NOTICE  README.md  api.html  index.html  mkdocs.yml  pyproject.toml  quickstart.html  requirements-dev.txt  search.html  sitemap.xml
.github/workflows/: publish-docs.yml  publish-to-pypi.yml  test-aws-ip-ranges-data.yml  tests.yml
awsipranges/: __init__.py  config.py  data_loading.py  exceptions.py  utils.py
awsipranges/models/: awsipprefix.py  awsipprefixes.py
docs/: api.md  quickstart.md
search/: search_index.json
tests/: test_utils.py  utils.py
tests/data/: test_syntax_and_semantics.py
tests/integration/: test_package_apis.py
tests/unit/: test_data_loading.py  test_exceptions.py
tests/unit/models/: test_awsipprefix.py
